css/custom.css
.foundry {
  background-color: #f0fbff;
}

.obsolete {
  background-color: #f6f6f6;
}

.inactive_row {
  background-color: silver;
}
.ic-display{
  display: flex;
  justify-content: space-around;
}
#table-main{
  display: none;
}

.mytooltipstyle{
  color: white !important;
  background-color: rgba(0,0,0,0.4) !important;
  padding: 5px;
  height: 10px;
}

